--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	a { color:#000; text-decoration:none; }
 	a:hover { text-decoration:underline; }
 	img { border:0; }
-	body { margin:0; padding:15px 0 0; background:url('bg_body.jpg'); background-size:cover; background-attachment:fixed; }
+	body { margin:0; padding:15px 0 0; background:url('./img/bg_body.jpg'); background-size:cover; background-attachment:fixed; }
 	.mainwrap { max-width: 370px; margin:0 auto 15px; background:rgb(175, 239, 90); background: rgba(152, 255, 0, 0.5); padding:15px; }
 
 	.logotext h1 { text-align:center; font: normal 100px/normal "Creepster", Helvetica, sans-serif;  color: rgb(51, 51, 51); letter-spacing: 15px; text-shadow: -3px 0 1px rgb(30,242,241) , 3px 0 1px rgb(246,5,10); transition:color 0.2s ease; padding:0; margin:0; }
