optimizations based on Lighthouse test

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
-<html>
+<!DOCTYPE html>
+<html lang="en-US">
 <head>
 	<title>T S U U K</title>
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-<link async href="//fonts.googleapis.com/css?family=Creepster" rel="stylesheet" type="text/css">
+<meta name="Description" content="Hello. Is it Tsuuk you're looking for?">
+<link async href="//fonts.googleapis.com/css?family=Creepster&text=kstu" rel="stylesheet" type="text/css">
 <style>
 	body {
 		margin:0;
