--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>T S U U K</title>
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 <meta name="Description" content="Hello. Is it Tsuuk you're looking for?">
+<link rel="icon" href="./favicon.ico" type="image/x-icon">
 <link async href="//fonts.googleapis.com/css?family=Creepster&text=kstu" rel="stylesheet" type="text/css">
 <style>
 	body {
