--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		font-family:Arial, Helvetica, sans-serif;
 		background-image:url('./img/bg_body.jpg');
 		background-position: 50% 50%;
+		background-color: #b2e361;
 		background-size:cover;
 		background-attachment:fixed;
 	}
