--- a/index.html
+++ b/index.html
@@ -1,250 +1,259 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-154868313-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-154868313-1');
+  </script>
 	<title>TSUUK</title>
-<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-<meta name="Description" content="Hello. Is it Tsuuk you're looking for?">
-<meta property="og:locale" content="en_US">
-<meta property="og:type" content="website">
-<meta property="og:title" content="Live electronic music">
-<meta property="og:description" content="Hello. Is it Tsuuk you're looking for?">
-<meta property="og:url" content="https://tsuuk.fi/">
-<meta property="og:site_name" content="TSUUK" />
-<meta name="twitter:title" content="Live electronic music">
-<meta name="twitter:description" content="Hello. Is it Tsuuk you're looking for?">
-<link rel="icon" href="./favicon.ico" type="image/x-icon">
-<link async href="//fonts.googleapis.com/css?family=Creepster&text=kstu" rel="stylesheet" type="text/css">
-<style>
-	body {
-		margin:0;
-		padding:15px 0 0;
-		font-size:16px;
-		font-family:Arial, Helvetica, sans-serif;
-		background-image:url('./img/bg_body.jpg');
-		background-position: 50% 50%;
-		background-color: #b2e361;
-		background-size:cover;
-		background-attachment:fixed;
-	}
-  body.startup:before {
-    content: "";
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: #b2e361;
-    z-index: 2;
-  }
-  body.startup h1 {
-    top: 50%;
-    transform:translate(-50%, -50%) scale(2.5);
-  }
-	h1 {
-		font: normal 100px/normal "Creepster", Helvetica, sans-serif;
-		color: rgb(51, 51, 51);
-		text-align:center;
-		letter-spacing: 15px;
-		transition:color 0.2s ease, transform .5s, top .5s;
-		padding:0;
-		margin: 0;
-		cursor: progress;
-		animation: text-flicker-in-glow 5s linear both;
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
+  <meta name="Description" content="Hello. Is it Tsuuk you're looking for?">
+  <meta property="og:locale" content="en_US">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Live electronic music">
+  <meta property="og:description" content="Hello. Is it Tsuuk you're looking for?">
+  <meta property="og:url" content="https://tsuuk.fi/">
+  <meta property="og:site_name" content="TSUUK" />
+  <meta name="twitter:title" content="Live electronic music">
+  <meta name="twitter:description" content="Hello. Is it Tsuuk you're looking for?">
+  <link rel="icon" href="./favicon.ico" type="image/x-icon">
+  <link async href="//fonts.googleapis.com/css?family=Creepster&text=kstu" rel="stylesheet" type="text/css">
+  <style>
+    body {
+      margin:0;
+      padding:15px 0 0;
+      font-size:16px;
+      font-family:Arial, Helvetica, sans-serif;
+      background-image:url('./img/bg_body.jpg');
+      background-position: 50% 50%;
+      background-color: #b2e361;
+      background-size:cover;
+      background-attachment:fixed;
+    }
+    body.startup:before {
+      content: "";
+      display: block;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: #b2e361;
+      z-index: 2;
+    }
+    body.startup h1 {
+      top: 50%;
+      transform:translate(-50%, -50%) scale(2.5);
+    }
+    h1 {
+      font: normal 100px/normal "Creepster", Helvetica, sans-serif;
+      color: rgb(51, 51, 51);
+      text-align:center;
+      letter-spacing: 15px;
+      transition:color 0.2s ease, transform .5s, top .5s;
+      padding:0;
+      margin: 0;
+      cursor: progress;
+      animation: text-flicker-in-glow 5s linear both;
 
-		position: fixed;
-		top: 4.5rem;
-		left: 50%;
-		transform: translate(-50%, -50%);
-    z-index: 3;
-	}
+      position: fixed;
+      top: 4.5rem;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      z-index: 3;
+    }
 
-	h1:hover {
-		color:#fff;
-	}
+    h1:hover {
+      color:#fff;
+    }
 
-	@keyframes text-flicker-in-glow {
-    0% {
-      opacity: 0;
+    @keyframes text-flicker-in-glow {
+      0% {
+        opacity: 0;
+      }
+      10% {
+        opacity: 0;
+      }
+      10.1% {
+        opacity: 1;
+      }
+      10.2% {
+        opacity: 0;
+      }
+      20% {
+        opacity: 0;
+      }
+      20.1% {
+        opacity: 1;
+      }
+      20.6% {
+        opacity: 0;
+      }
+      30% {
+        opacity: 0;
+      }
+      30.1% {
+        opacity: 1;
+      }
+      30.5% {
+        opacity: 1;
+      }
+      30.6% {
+        opacity: 0;
+      }
+      45% {
+        opacity: 0;
+      }
+      45.1% {
+        opacity: 1;
+      }
+      50% {
+        opacity: 1;
+      }
+      55% {
+        opacity: 1;
+      }
+      55.1% {
+        opacity: 0;
+      }
+      57% {
+        opacity: 0;
+      }
+      57.1% {
+        opacity: 1;
+      }
+      60% {
+        opacity: 1;
+      }
+      60.1% {
+        opacity: 0;
+      }
+      65% {
+        opacity: 0;
+      }
+      65.1% {
+        opacity: 1;
+      }
+      75% {
+        opacity: 1;
+      }
+      75.1% {
+        opacity: 0;
+      }
+      77% {
+        opacity: 0;
+      }
+      77.1% {
+        opacity: 1;
+      }
+      85% {
+        opacity: 1;
+      }
+      85.1% {
+        opacity: 0;
+      }
+      86% {
+        opacity: 0;
+      }
+      86.1% {
+        opacity: 1;
+      }
+      90% {
+        opacity: 1;
+        text-shadow: none;
+      }
+      100% {
+        text-shadow: -3px 0 1px rgb(30,242,241) , 3px 0 1px rgb(246,5,10);
+      }
     }
-    10% {
-      opacity: 0;
-    }
-    10.1% {
-      opacity: 1;
-    }
-    10.2% {
-      opacity: 0;
-    }
-    20% {
-      opacity: 0;
-    }
-    20.1% {
-      opacity: 1;
-    }
-    20.6% {
-      opacity: 0;
-    }
-    30% {
-      opacity: 0;
-    }
-    30.1% {
-      opacity: 1;
-    }
-    30.5% {
-      opacity: 1;
-    }
-    30.6% {
-      opacity: 0;
-    }
-    45% {
-      opacity: 0;
-    }
-    45.1% {
-      opacity: 1;
-    }
-    50% {
-      opacity: 1;
-    }
-    55% {
-      opacity: 1;
-    }
-    55.1% {
-      opacity: 0;
-    }
-    57% {
-      opacity: 0;
-    }
-    57.1% {
-      opacity: 1;
-    }
-    60% {
-      opacity: 1;
-    }
-    60.1% {
-      opacity: 0;
-    }
-    65% {
-      opacity: 0;
-    }
-    65.1% {
-      opacity: 1;
-    }
-    75% {
-      opacity: 1;
-    }
-    75.1% {
-      opacity: 0;
-    }
-    77% {
-      opacity: 0;
-    }
-    77.1% {
-      opacity: 1;
-    }
-    85% {
-      opacity: 1;
-    }
-    85.1% {
-      opacity: 0;
-    }
-    86% {
-      opacity: 0;
-    }
-    86.1% {
-      opacity: 1;
-    }
-    90% {
-      opacity: 1;
-      text-shadow: none;
-    }
-    100% {
-      text-shadow: -3px 0 1px rgb(30,242,241) , 3px 0 1px rgb(246,5,10);
-    }
-	}
 
-	p {
-		margin-top:22px;
-		color: #000;
-		line-height: 22px;
-		font-size: 1rem;
-	}
-	span {
-		display: inline-block;
-		padding-bottom: 20px;
-		background:rgb(214, 243, 194);
-		background:rgba(255, 255, 255, 0.4);
-	}
-	.pb-0 {
-		padding-bottom:0;
-	}
-	.container {
-		max-width: 370px;
-		margin:0 auto 15px;
-		background:rgb(175, 239, 90);
-		background: rgba(152, 255, 0, 0.5);
-		padding:15px;
-	}
-	.youtube-container {
-    background-color: #000;
-    position: relative;
-    padding-top: 56.25%;
-    overflow: hidden;
-    cursor: pointer;
-    background-position:50% 50%;
-    background-repeat:no-repeat;
-    background-size:cover;
-	}
-	.youtube-container img {
-	    width: 100%;
-	    top: -16.84%;
-	    left: 0;
-	    opacity: 0.7;
-	}
-	.youtube-container .play-button {
-	    width: 70px;
-	    height: 50px;
-	    background-color: #333;
-	    box-shadow: 0 0 30px rgba( 0,0,0,0.6 );
-	    z-index: 1;
-	    opacity: 0.8;
-	    border-radius: 10px;
-	}
-	.youtube-container .play-button:before {
-	    content: "";
-	    border-style: solid;
-	    border-width: 11px 0 11px 20px;
-	    border-color: transparent transparent transparent #fff;
-	}
-	.youtube-container img,
-	.youtube-container .play-button {
-	    cursor: pointer;
-	}
-	.youtube-container img,
-	.youtube-container iframe,
-	.youtube-container .play-button,
-	.youtube-container .play-button:before {
-	    position: absolute;
-	}
-	.youtube-container .play-button,
-	.youtube-container .play-button:before {
-	    top: 50%;
-	    left: 50%;
-	    transform: translate3d( -50%, -50%, 0 );
-	}
-	.youtube-container iframe {
-	    height: 100%;
-	    width: 100%;
-	    top: 0;
-	    left: 0;
-	}
+    p {
+      margin-top:22px;
+      color: #000;
+      line-height: 22px;
+      font-size: 1rem;
+    }
+    span {
+      display: inline-block;
+      padding-bottom: 20px;
+      background:rgb(214, 243, 194);
+      background:rgba(255, 255, 255, 0.4);
+    }
+    .pb-0 {
+      padding-bottom:0;
+    }
+    .container {
+      max-width: 370px;
+      margin:0 auto 15px;
+      background:rgb(175, 239, 90);
+      background: rgba(152, 255, 0, 0.5);
+      padding:15px;
+    }
+    .youtube-container {
+      background-color: #000;
+      position: relative;
+      padding-top: 56.25%;
+      overflow: hidden;
+      cursor: pointer;
+      background-position:50% 50%;
+      background-repeat:no-repeat;
+      background-size:cover;
+    }
+    .youtube-container img {
+        width: 100%;
+        top: -16.84%;
+        left: 0;
+        opacity: 0.7;
+    }
+    .youtube-container .play-button {
+        width: 70px;
+        height: 50px;
+        background-color: #333;
+        box-shadow: 0 0 30px rgba( 0,0,0,0.6 );
+        z-index: 1;
+        opacity: 0.8;
+        border-radius: 10px;
+    }
+    .youtube-container .play-button:before {
+        content: "";
+        border-style: solid;
+        border-width: 11px 0 11px 20px;
+        border-color: transparent transparent transparent #fff;
+    }
+    .youtube-container img,
+    .youtube-container .play-button {
+        cursor: pointer;
+    }
+    .youtube-container img,
+    .youtube-container iframe,
+    .youtube-container .play-button,
+    .youtube-container .play-button:before {
+        position: absolute;
+    }
+    .youtube-container .play-button,
+    .youtube-container .play-button:before {
+        top: 50%;
+        left: 50%;
+        transform: translate3d( -50%, -50%, 0 );
+    }
+    .youtube-container iframe {
+        height: 100%;
+        width: 100%;
+        top: 0;
+        left: 0;
+    }
 
-	@media screen and (max-width: 400px) {
-		h1 {
-			font-size:72px;
-		}
-	}
-</style>
+    @media screen and (max-width: 400px) {
+      h1 {
+        font-size:72px;
+      }
+    }
+  </style>
 </head>
 <body class="startup">
 	<div class="container" style="padding-top: 7rem;">
